src-tauri/build_errors.txt
cargo :     Checking launcherg v0.0.0 (E:\Lau
ncherg-Mod\src-tauri)
発生場所 行:1 文字:1
+ cargo check 2>&1 | Out-File -FilePath build
_errors.txt -Encoding utf8
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified:  
   (    Checking la...-Mod\src-tauri):Strin  
  g) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandE 
   rror
 
error[E0432]: unresolved import `windows::Win
32::UI::WindowsAndMessaging::PtInRect`
  --> src\infrastructure\windowsimpl\scaling\
cursor.rs:13:71
   |
13 |     GetGUIThreadInfo, GetWindowLongW, Ge
tWindowRect, IsWindowVisible, PtInRect, SetCu
rsorPos,
   |                                         
                              ^^^^^^^^ no `Pt
InRect` in `Windows::Win32::UI::WindowsAndMes
saging`

warning: unnecessary parentheses around funct
ion argument
   --> src\infrastructure\windowsimpl\scaling
\cursor_renderer.rs:386:46
    |
386 |             let mut final_pixels = vec!
[0u8; (width as usize * height as usize * 4)]
;
    |                                        
      ^                                    ^
    |
    = note: `#[warn(unused_parens)]` on by de
fault
help: remove these parentheses
    |
386 -             let mut final_pixels = vec!
[0u8; (width as usize * height as usize * 4)]
;
386 +             let mut final_pixels = vec!
[0u8; width as usize * height as usize * 4];
    |

warning: unused import: `DXGI_ALPHA_MODE_PREM
ULTIPLIED`
  --> src\infrastructure\windowsimpl\scaling\
processor.rs:23:29
   |
23 |     DXGI_ALPHA_MODE_IGNORE, DXGI_ALPHA_M
ODE_PREMULTIPLIED, DXGI_FORMAT_B8G8R8A8_UNORM
,
   |                             ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by de
fault

warning: unused imports: `DWMWA_EXTENDED_FRAM
E_BOUNDS`, `DWMWA_NCRENDERING_ENABLED`, and `
DwmGetWindowAttribute`
  --> src\infrastructure\windowsimpl\scaling\
processor.rs:26:37
   |
26 | use windows::Win32::Graphics::Dwm::{DwmG
etWindowAttribute, DWMWA_EXTENDED_FRAME_BOUND
S, DWMWA_NCRENDERING_ENABLED};
   |                                     ^^^^
^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^
^  ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `GetMessageW`, `Post
QuitMessage`, and `TranslateMessage`
  --> src\infrastructure\windowsimpl\scaling\
processor.rs:42:23
   |
42 |     DispatchMessageW, GetMessageW, PeekM
essageW, PostQuitMessage, TranslateMessage, M
SG, PM_REMOVE,
   |                       ^^^^^^^^^^^       
         ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^

warning: unused import: `windows::Win32::Grap
hics::Direct2D::Common::D2D_POINT_2F`
  --> src\infrastructure\windowsimpl\scaling\
processor.rs:46:5
   |
46 | use windows::Win32::Graphics::Direct2D::
Common::D2D_POINT_2F;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `ID2D1RenderTarget` 
and `ID2D1SolidColorBrush`
 --> src\infrastructure\windowsimpl\scaling\t
oolbar.rs:4:38
  |
4 |     D2D1CreateFactory, ID2D1Factory, ID2D
1RenderTarget, ID2D1SolidColorBrush,
  |                                      ^^^^
^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `is_invalid` fo
und for struct `HWND` in the current scope
  --> src\infrastructure\windowsimpl\scaling\
cursor.rs:97:26
   |
97 |                 if child.is_invalid() {
   |                          ^^^^^^^^^^ meth
od not found in `HWND`

error[E0609]: no field `0` on type `Result<()
, windows::core::Error>`
   --> src\infrastructure\windowsimpl\scaling
\cursor.rs:100:28
    |
100 |                     if err.0 == 0 {
    |                            ^ unknown fi
eld

error[E0308]: mismatched types
   --> src\infrastructure\windowsimpl\scaling
\cursor.rs:110:27
    |
110 |         if region_type == SIMPLEREGION.
0 || region_type == COMPLEXREGION.0 {
    |            -----------    ^^^^^^^^^^^^^
^ expected `GDI_REGION_TYPE`, found `i32`
    |            |
    |            expected because this is `GD
I_REGION_TYPE`
    |
help: consider removing the tuple struct fiel
d `0`
    |
110 -         if region_type == SIMPLEREGION.
0 || region_type == COMPLEXREGION.0 {
110 +         if region_type == SIMPLEREGION 
|| region_type == COMPLEXREGION.0 {
    |

error[E0308]: mismatched types
   --> src\infrastructure\windowsimpl\scaling
\cursor.rs:110:60
    |
110 |         if region_type == SIMPLEREGION.
0 || region_type == COMPLEXREGION.0 {
    |                                        
     -----------    ^^^^^^^^^^^^^^^ expected 
`GDI_REGION_TYPE`, found `i32`
    |                                        
     |
    |                                        
     expected because this is `GDI_REGION_TYP
E`
    |
help: consider removing the tuple struct fiel
d `0`
    |
110 -         if region_type == SIMPLEREGION.
0 || region_type == COMPLEXREGION.0 {
110 +         if region_type == SIMPLEREGION.
0 || region_type == COMPLEXREGION {
    |

error[E0599]: no method named `is_invalid` fo
und for struct `HWND` in the current scope
   --> src\infrastructure\windowsimpl\scaling
\cursor.rs:309:38
    |
309 |                 if !info.hwndCapture.is
_invalid() {
    |                                      ^^
^^^^^^^^ method not found in `HWND`

warning: variable does not need to be mutable
   --> src\infrastructure\windowsimpl\scaling
\overlay.rs:368:17
    |
368 |             let mut fps_vertex_start = 
vertices.len();
    |                 ----^^^^^^^^^^^^^^^^
    |                 |
    |                 help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by defau
lt

warning: unused variable: `window_kind`
   --> src\infrastructure\windowsimpl\scaling
\processor.rs:445:57
    |
445 | ...                   let window_kind =
 src_tracker.get_window_kind();
    |                           ^^^^^^^^^^^ h
elp: if this is intentional, prefix it with a
n underscore: `_window_kind`
    |
    = note: `#[warn(unused_variables)]` on by
 default

Some errors have detailed explanations: E0308
, E0432, E0599, E0609.
For more information about an error, try `rus
tc --explain E0308`.
warning: `launcherg` (bin "launcherg") genera
ted 8 warnings
error: could not compile `launcherg` (bin "la
uncherg") due to 6 previous errors; 8 warning
s emitted
